WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189601
[Curl][WebKit] Bug fix for continuously retrying with empty credentials.
https://bugs.webkit.org/show_bug.cgi?id=189601
Summary
[Curl][WebKit] Bug fix for continuously retrying with empty credentials.
Basuke Suzuki
Reported
2018-09-13 13:22:37 PDT
Found by http/tests/xmlhttprequest/logout.html . When NDT receive authentication challenge and client returns empty credentials, current implementation keep sending empty credentials infinitely.
Attachments
PATCH
(6.28 KB, patch)
2018-09-13 13:25 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-09-13 13:25:59 PDT
Created
attachment 349693
[details]
PATCH
Basuke Suzuki
Comment 2
2018-09-14 11:03:04 PDT
Comment on
attachment 349693
[details]
PATCH Thanks for r+
WebKit Commit Bot
Comment 3
2018-09-14 11:28:37 PDT
Comment on
attachment 349693
[details]
PATCH Clearing flags on attachment: 349693 Committed
r236012
: <
https://trac.webkit.org/changeset/236012
>
WebKit Commit Bot
Comment 4
2018-09-14 11:28:39 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-09-14 11:29:28 PDT
<
rdar://problem/44463323
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug