[Curl][WebKit] Bug fix for continuously retrying with empty credentials. https://bugs.webkit.org/show_bug.cgi?id=189601

Reviewed by Alex Christensen.

Added stop condition for empty credentials passed by client.

* NetworkProcess/curl/NetworkDataTaskCurl.cpp:
(WebKit::NetworkDataTaskCurl::curlDidReceiveResponse):
(WebKit::NetworkDataTaskCurl::invokeDidReceiveResponse):
(WebKit::NetworkDataTaskCurl::tryHttpAuthentication):
(WebKit::NetworkDataTaskCurl::tryProxyAuthentication):
* NetworkProcess/curl/NetworkDataTaskCurl.h:


Canonical link: https://commits.webkit.org/204592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236012 268f45cc-cd09-0410-ab3c-d52691b4dbfc